--- a/src/Board/Board.css
+++ b/src/Board/Board.css
@@ -4,7 +4,7 @@
 
 #sudoku-table,
 td {
-  border: 1px solid black;
+  border: 1px solid #727272;
   border-collapse: collapse;
 }
 
@@ -23,10 +23,24 @@ td:not(.filled-cell):hover {
   background-color: #f0f0ff;
 }
 
+.selected-cell {
+  background-color: #f0f0ff;
+}
+
 .border-right {
   border-right: 2px solid black;
 }
 
 .border-bottom {
   border-bottom: 2px solid black;
+}
+
+td:nth-child(3),
+td:nth-child(6) {
+  border-right: solid 2px black;
+}
+
+tr:nth-child(3),
+tr:nth-child(6) {
+  border-bottom: solid 2px black;
 }
